# swayboard

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
src/: cli.rs  config.rs  error.rs  layout.rs  lib.rs  logging.rs  main.rs  manager.rs  service.rs
