[package]
name = "swayboard"
version = "0.1.0"
authors = ["Belousow Makc <lib.bmw@gamil.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swayipc-async = "2"
swayipc-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "3", features = ["derive"] }
anyhow = "1"
thiserror = "1"
config = { version = "0.13", features = ["json", "toml", "yaml"], default-features = false }
