[package]
name = "swayboard"
version = "0.1.0"
authors = ["Belousov Max <mail@singulared.space>"]
edition = "2021"

description = "Automatic keyboard layout manager for Sway wm"
keywords = ["sway", "keyboard", "layout"]
categories = ["os", "os::linux-apis"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/singulared/swayboard"
documentation = "https://docs.rs/swayboard/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swayipc-async = "2"
swayipc-types = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
futures-util = { version = "0.3", default-features = false }
tracing = { version = "0.1", features = [
    "attributes",
], default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }
tracing-appender = { version = "0.2", default-features = false }
clap = { version = "4", features = ["derive", "std"], default-features = false }
anyhow = "1"
thiserror = "1"
config = { version = "0.14", features = [
    "json",
    "toml",
    "yaml",
], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
dirs = "5"
